# Warframe-OCR

./: .gitignore  ExocetBOLD.traineddata  Readme.txt  TEST_sql.py  TEST_things.py  bot.py  check_screens.py  check_screens_v2.py  clear_db.py  create_db.py  db_operations.py  get-data.py  hsl_finder.py  loadconfig.py  ocr.py  ocr_live.py  ocr_local.py  ocr_local_test.py  ocr_tune.py  ocrtest.py  part_detector.py  ref_creator.py  ref_meso.txt  ref_quality.txt  relic.proto  relic_pb2.py  relic_pb2_grpc.py  relicdb  relicdb.sql  relicdb.sqlite3  relics.html  requirements.txt  scrap.py  scrap2.py  screen_capture.py  server.py  spellcheck.py  tessinput.tif  test_ocr.py  test_scrap2.py  (+9 more)
Dataset-processing/: fixedbox.box  slider_ui.py  split_data.py  test.box  test.py  testing_themes.py  verify_boxes.py
TEST/: TEST_proxy.py  TEST_scrapold.py  check_screens.py  check_screens_v2.py  hsl_finder.py  rbg_finder.py  slider_ui.py
ground_truth/: 10.gt.txt  10.tif  101.tif  102.tif  103.gt.txt  104.gt.txt  104.tif  108.tif  109.tif  11.gt.txt  110.tif  111.gt.txt  111.tif  113.gt.txt  113.tif  114.gt.txt  114.tif  115.gt.txt  116.tif  117.gt.txt  12.gt.txt  12.tif  13.gt.txt  13.tif  14.gt.txt  14.tif  15.gt.txt  15.tif  16.gt.txt  16.tif  17.gt.txt  17.tif  18.gt.txt  18.tif  19.gt.txt  19.tif  2.gt.txt  2.tif  20.gt.txt  20.tif  (+145 more)
grpc_server/: relic_pb2_grpc.py  server.py
ocr/: auto_canny.py  ocrrecognition.py  ocrtest.py
part-detect/: part_detector.py
ref/: ref_1_ocr.txt  ref_quality.txt  ref_words.txt  ref_words_ocr.txt
ref/other_ref/: ref_axi.txt  (+6 more)
templates/: oldtable.html  relic.html  table.html  test.html
tessdata/: Exocet.traineddata  Roboto.traineddata  relic1.traineddata
tesserocr_pool/: .gitignore  Cargo.toml  __init__.py  build.py
tesserocr_pool/src/: lib.rs
weblic/: db.sqlite3  manage.py
(+293 files in other folders)
