[package]
authors = ["Stefan Lukas <etaloof@gmail.com>"]
name = "tesserocr_pool"
version = "0.1.0"
edition = "2018"

[dependencies]
rayon = "1.5.0"
pyo3 = { version = "0.12.3", features = ["extension-module"] }
leptess = "0.9.0"
numpy = "0.12.1"
image = { version = "0.23.12", features = [ "bmp" ], default_features = false }
num_cpus = "1.13.0"

[lib]
name = "tesserocr_pool"
crate-type = ["cdylib"]

[profile.release]
lto = true
