[package]
authors = ["Stefan Lukas <etaloof@gmail.com>"]
name = "tesserocr_pool"
version = "0.1.0"
edition = "2018"

[workspace]

[dependencies]
rayon = "1.5.0"
pyo3 = { version = "0.12.3", features = ["extension-module"] }
leptess = "0.9.0"
numpy = "0.12.1"
image = { version = "0.23.12", features = [ "bmp" ], default_features = false }
num_cpus = "1.13.0"
bincode = "1.3.1"
spmc = "0.3.0"
tesserocr_pool =  { path = "tesserocr_pool_rust", package = "tesserocr_pool_rs" }

[dev-dependencies]
minifb = "0.19.1"

[lib]
name = "tesserocr_pool"
crate-type = ["cdylib"]

[[bin]]
name = "simple_thread"
path = "tesserocr_pool_rust/src/bin/simple_thread.rs"

[[bin]]
name = "custom_thread_pool"
path = "tesserocr_pool_rust/src/bin/custom_thread_pool.rs"

[[bin]]
name = "flamegraph"
path = "tesserocr_pool_rust/src/bin/flamegraph.rs"


[profile.release]
lto = true
debug = true
